--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -436,11 +436,6 @@ html {
     letter-spacing: -0.1px;
 }
 
-body {
-    color: #959cb1;
-    font-size: 1rem;
-}
-
 body,
 button,
 input,
@@ -1011,7 +1006,8 @@ fieldset {
     line-height: 22px;
 }
 
-.form-input, .form-select {
+.form-input,
+.form-select {
     display: block;
     font-size: 16px;
     line-height: 24px;
@@ -1023,14 +1019,13 @@ fieldset {
     box-shadow: none;
     max-width: 100%;
     width: 35% !important;
-
 }
 
-.input.large{
+.input.large {
     display: block !important;
 }
 
-.input.small{
+.input.small {
     display: none !important;
 }
 
@@ -1409,31 +1404,29 @@ textarea.form-input {
         box-shadow: none;
         max-width: 100%;
         width: 85% !important;
-    
     }
 
-    .section-logo{
+    .section-logo {
         min-height: 110vh !important;
     }
 
-    .btn-connexion{
+    .btn-connexion {
         width: 85% !important;
     }
-    .input.large{
+    .input.large {
         display: none !important;
     }
-    
-   .input.small{
+
+    .input.small {
         display: block !important;
     }
-    .titre-accueil.espace-accueil{
+    .titre-accueil.espace-accueil {
         font-size: 1.8rem !important;
     }
 
-    .last-room{
+    .last-room {
         margin-top: 20% !important;
     }
-    
 }
 
 @media (min-width: 641px) {
@@ -1452,8 +1445,6 @@ textarea.form-input {
         padding-right: 24px;
         flex-shrink: 0;
     }
-
-
 }
 
 .header-nav-toggle {
@@ -3674,32 +3665,25 @@ img.has-shadow {
     justify-content: center; /* Horizontal centering */
     align-items: center; /* Vertical centering */
     margin-bottom: 24px;
+    margin-left: 30%;
 }
 
-.last-room span {
-    color: black !important;
+#lastRoom {
+    text-decoration: underline;
+    color: #01619E;
+    font-size: smaller;
+
 }
 
-.last-room span {
-    font-size: 16px;
-    line-height: 24px;
-    letter-spacing: -0.1px;
-    font-weight: 600;
-    color: #ffffff;
-    line-height: 16px;
+#lastRoomContainer{
+    margin-left: 0;
 }
 
-.last-room a {
-    font-size: 16px;
-    line-height: 24px;
-    letter-spacing: -0.1px;
-    font-weight: 600;
-    color: black;
-    line-height: 16px;
-    padding: 8px 8px;
-    border-radius: 5px;
-    margin: 4px;
+.last-room span{
+ font-style: italic;
+ font-size: smaller;
 }
+
 
 .last-room a:hover {
     background-color: #0000002a;
@@ -3724,59 +3708,199 @@ img.has-shadow {
 
 :root {
     --main-color: #f4faff;
-    --color-red: #9B000C;
-    --color-turquoise: #39BAAB;
+    --color-red: #9b000c;
+    --color-turquoise: #39baab;
+    --color-blue: #00619e;
+    --color-modal: rgba(70, 102, 123, 0.5);
 }
 
-@keyframes pulse {
-    60% {
-        opacity: .7;
-    }
+/* General====================================================== */
+
+html {
+    --res: calc(0.01 * 10vmin);
 }
 
+* {
+    box-sizing: border-box;
+}
 
 body {
     margin: 0;
     padding: 0;
     background-color: var(--main-color);
     font-family: 'Roboto', sans-serif;
-    color: #162D4E;
-    /* Utilisez la variation de police Bespoke Stencil que vous préférez ici */
+    color: #162d4e !important;
+}
+
+button {
+    box-shadow: none;
+    border: none;
+}
+
+select {
+    all: unset;
+}
+
+ul {
+    list-style-type: none;
+}
+
+a {
+    text-decoration: none;
+    display: block;
+}
+.btn-primary,
+.btn-secondary,
+.nav-admin-btn,
+.btn-modifier,
+.btn-supprimer,
+.btn-404 {
+    padding: 0.75rem 2rem;
+    font-size: calc(20 * var(--res));
+}
+
+.btn-primary,
+.btn-404 {
+    color: var(--main-color);
+    background-color: var(--color-turquoise);
+}
+
+.btn-secondary {
+    color: var(--main-color);
+    background-color: #00619e;
+    box-shadow: 1px 1px 1px 1px #d2ecfc;
+}
+
+.nav-admin-btn {
+    color: var(--main-color);
+    background-color: var(--color-red);
+    box-shadow: 1px 1px 1px 1px #d2ecfc;
+}
+
+.btn-back {
+    padding: 0.4em;
+    color: var(--main-color);
+    background-color: var(--color-red);
+}
+
+.btn-modifier {
+    background-color: #fafdff;
+    color: #46667b;
+}
+
+.btn-supprimer {
+    background-color: var(--color-red);
+    padding: 0.75rem 1rem;
+    margin-left: 1em;
+    color: #fafdff;
+    cursor: pointer;
+}
+
+.hidden-inlaptop {
+    display: none;
+}
+
+.hidden-insmartphone {
+    display: none;
+}
+
+.formulaire,
+.btn-primary,
+.btn-secondary,
+.nav-admin-btn,
+.btn-modifier,
+.btn-supprimer,
+.btn-back,
+.btn-404,
+.ajout,
+.form-ajout-email,
+.form-ajout-password,
+.dropdown-user,
+.card,
+.camera,
+.fenetre-visio,
+.fenetre-chat,
+.chat-text,
+.chat-writting,
+.fenetre-participant,
+.inner-participant,
+.card-visio,
+.visio-container,
+.btn-visio,
+.visio-deconnexion,
+.card,
+.formulaire-acceuil {
+    border-radius: 0.625rem;
+}
+
+.chat-text,
+.chat-writting,
+.btn-chat-envoyer {
+    border-radius: 0.4rem;
+}
+
+/* Formulaire ====================================================== */
+
+.form-accueil {
+    padding: 0.72em 0.5em;
+    width: auto;
+    margin-right: 1em;
+}
+.formulaire {
+    color: #2e5996;
+    font-size: calc(20 * var(--res));
+    line-height: 1.25rem;
+    border: solid 1px #d9e3ed;
+    box-shadow: inset 0.02em 0.02em rgba(0, 97, 158, 0.25);
+}
+
+.formulaire::placeholder {
+    color: #2e5996;
+    font-weight: 400;
+}
+
+.form-admin-connexion,
+.form-admin {
+    padding: 0.72em 0.5em;
+    width: auto;
+}
+
+.dropdown-user {
+    color: #00619e;
+    background-color: #fafdff;
+    border: #fafdff;
+    padding: 0.75rem 1.5rem;
+    font-size: calc(20 * var(--res));
+    text-align: center;
 }
 
 /* Accueil====================================================== */
 .grid-accueil {
     display: grid;
     grid-template-columns: repeat(2, minmax(0, 1fr));
-    color: #162D4E
 }
 
 .section-logo {
-    background-color: #00619E;
+    background-color: var(--color-blue);
     height: 100vh;
     clip-path: polygon(0 0, 100% 0, 74% 100%, 0% 100%);
     overflow: hidden;
 }
 
 .div-logo {
-    margin-top: 13rem;
-    margin-bottom: 13rem;
-    margin-left: 8rem;
-    margin-right: 8rem;
+    width: 80%;
+    height: 90vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
-.logo-accueil {
-    margin-right: 2rem
-        /* 16px */
-    ;
-    max-width: 20rem;
-}
-
-.citation-logo-accueil {
+blockquote {
     color: var(--main-color);
-    margin-top: .5em;
-    margin-left: 9rem;
-    font-size: 0.75rem;
+    margin-top: 0.5em;
+    margin-left: 10rem;
+    font-size: calc(13 * var(--res));
 }
 
 .nav-acceuil {
@@ -3785,450 +3909,279 @@ body {
     padding: 1.5rem 3.5rem 0 1.5rem;
 }
 
-.btn-connexion-admin {
-    animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
-    color: #00619E;
-    text-decoration: none;
-    padding: 0.5em 1.5em;
-    background-color: #d9edfa;
-    border-radius: 0.625rem;
-    box-shadow: 1px 1px 1px 1px #d2ecfc;
-}
-
-.espace-accueil{
-   margin-top: 11.5rem;
-    
-}
 .titre-accueil {
-    margin-top: 10%;
-    color: #162D4E;
-    font-size: 2.8rem;
+    margin: 0 0 0;
+    font-size: calc(60 * var(--res));
     font-weight: 600;
     font-family: 'BespokeStencil-Regular', 'Roboto', sans-serif;
+    width: fit-content;
+    color: #152d4f;
+}
+
+.espace-accueil {
+    margin-top: 35% !important;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .sous-titre-acceuil {
-    color: #162D4E;
-    font-size: 1.25rem;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    margin-top: 0;
+    font-size: calc(30 * var(--res)) !important;
+    font-style: normal !important;
+    font-weight: 400 !important;
+    margin-top: 0 !important;
+    color: #152d4f !important;
 }
 
 .div-btn {
     padding-top: 2rem;
+    display: flex;
 }
 
-.btn-connexion {
-    padding: 0.75rem 2.5rem 0.75rem 2.5rem;
-    color: var(--main-color);
-    border-radius: 0.625rem;
-    background-color: var(--color-turquoise);
-    text-decoration: none;
+.connect {
+    padding-right: 42px;
+    padding-bottom: 38px;
+    padding-top: 7px;
+    color: white !important;
+    height: 43px;
+    cursor: pointer;
+}
+
+/* Erreur 404 ====================================================== */
+.espace-404 {
+    margin-top: 20%;
+}
+
+.section-logo-404 {
+    background-color: #162d4e;
+}
+.btn-primary btn-primary-sm-acceuil {
+    width: 20px !important;
 }
 
 /* Admin connexion====================================================== */
-.btn-back {
-    color: var(--main-color);
-    background-color: var(--color-red); 
-    padding: .4em;
-    border-radius: 0.625rem;
-    animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
-}
 
-.espaceur{
-    margin-top: 10em;
-}
-
-.form {
-    list-style-type: none;
+.form-admnin-connect {
     list-style-position: outside;
     padding-left: 0;
 }
 
-.form-admnin {
-    padding-top: .5rem;
-
-}
-
-.formulaire {
-    border: solid .5px #9AC3ED;
-    border-radius: 0.625rem;
-    color: #2e5996;
-    padding: 0.25rem 2.5rem 0.25rem 2.5rem;
-    font-size: 1.25rem
-        /* 20px */
-    ;
-    line-height: 1.25rem
-        /* 28px */
-    ;
-
-}
-
-.form .formulaire::placeholder {
-    color: #0D3A69;
-    font-size: 1.25rem;
-    font-style: normal;
-    font-weight: 200;
-    line-height: normal;
-
+.admnin-form {
+    padding-top: 0.5rem;
 }
 
 /* Administration ====================================================== */
-
 
 .nav-administration {
     display: grid;
     grid-template-columns: auto;
     grid-template-columns: repeat(2, minmax(0, 1fr));
+}
 
-
+.taille-logo {
+    width: 8em;
+    margin: 0em 0em 1em 0em;
 }
 
 .ul-nav {
     display: flex;
     justify-content: flex-end;
-    list-style-type: none;
     padding-top: 4em;
     padding-right: 3em;
 }
 
 .nav-admin-icone {
-    padding-right: .5em;
+    padding-right: 0.5em;
 }
 
 .nav-admin-user {
-    font-size: large;
-    padding: 0 2em 0 0;
-}
-
-.nav-admin-btn {
-    color: var(--main-color);
-    text-decoration: none;
-    background-color: var(--color-red);
-    border-radius: 0.625rem;
-    animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
-    padding: 0.5em 1.5em;
-    box-shadow: 1px 1px 1px 1px #d2ecfc;
-}
-
-main {
-    margin: 0 2em 0 2em;
-}
-
-.titre-admin {
-    font-family: 'BespokeStencil-Regular', 'Roboto', sans-serif;
-    color: var(--main-color);
+    font-size: 1.1em;
+    padding: 0 1em 0 0;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
 
 .ajout {
-    background-color: #46667B;
+    background-color: #46667b;
     width: fit-content;
-    border-radius: 0.625rem;
     padding: 1em 2em 1em 2em;
-    margin-left: 2em;
+    margin: 0 0em 6em 2em;
+}
 
-
+.new-user {
+    font-family: 'BespokeStencil-Regular', 'Roboto', sans-serif;
+    color: #fafdff;
+    font-weight: 800;
+    font-size: 1.5em;
+    padding-left: 0em;
 }
 
 .form-ajout {
     display: flex;
-    text-decoration: none;
-    list-style-type: none;
     padding-left: 0;
-
-}
-
-.form-ajout-email,
-.form-ajout-password {
-    border: solid .5px #9AC3ED;
-    border-radius: 0.625rem;
-    box-shadow: inset .07em .07em rgba(0, 97, 158, 0.25);
-    color: #2e5996;
-    padding: 0.25rem 2rem 0.25rem 2rem;
-    font-size: 1.25rem;
-
-}
-
-.form-ajout-email::placeholder,
-.form-ajout-password::placeholder {
-    color: #0D3A69;
-    font-size: 1.25rem;
-    font-style: normal;
-    font-weight: 100;
 }
 
 .form-item-1,
 .form-item-2,
 .form-item-3 {
     padding-right: 1em;
-
-}
-
-.form-item-4 {
-    padding-left: 1em;
-    padding-top: 0.3em;
-
-}
-
-.dropdown-user {
-    color: #00619E;
-    text-decoration: none;
-    background-color: #FAFDFF;
-    border: #FAFDFF;
-    border-radius: 0.625rem;
-    padding: 0.5em 1.5em;
-
-    font-size: 0.9rem;
-}
-
-.btn-ajouter {
-    color: #FAFDFF;
-    text-decoration: none;
-    background-color: #39BAAB;
-    border-radius: 0.625rem;
-    padding: 0.5em 1.5em;
-}
-
-.new-user {
-    font-family: 'BespokeStencil-Regular', 'Roboto', sans-serif;
-    color: #FAFDFF;
 }
 
 .titre-admin,
 .titre-user {
     font-family: 'BespokeStencil-Regular', 'Roboto', sans-serif;
-    color: #0D3A69;
+    color: #0d3a69;
+    font-weight: 800;
+    font-size: 1.1em;
+}
+
+main {
+    margin: 0 2em;
 }
 
 .section-card {
+    height: 100%;
+    width: 100%;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: 30% 65%;
+    grid-template-rows: auto;
     grid-gap: 2em;
-    margin-top: 4em;
-
-}
-
-.colonne-admin {
-    grid-column: 1;
-    grid-row-gap: 1em;
-}
-
-.colonne-user {
-    grid-column: 2;
-    grid-gap: 1em;
 }
 
 .double-colonne {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 1em;
+    grid-template-columns: 48.5% 48.5%;
+    grid-gap: 1em;
 }
 
 .card {
-    border-radius: 0.625rem;
-    padding: .1em 5.5em 1em 2em;
+    width: 100%;
+    padding: 0.1em 7em 1em 2em;
 }
 
 .card-admin {
-    background-color: #46667B;
-    margin-bottom: 1em;
-    color: #FAFDFF;
-}
-
-.card-admin-admin {
-    height: fit-content;
+    background-color: #46667b;
+    color: var(--main-color);
+    margin-top: 1em;
 }
 
 .card-user {
-    background-color: #D1E5F2;
-    color: #46667B;
+    background-color: #d1e5f2;
+    color: #46667b;
+}
+
+.card-admin-entete {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 1em;
 }
 
 .card-email {
-    margin: 1em 0 0 0;
-
-}
-
-.btn-card {
-    display: flex;
-    list-style-type: none;
-    padding-left: 0;
-}
-
-.btn-card-modifier {
-    text-decoration: none;
-    background-color: #FAFDFF;
-    border-radius: 0.625rem;
-    padding: 0.75em 4em;
-    color: #46667B;
-}
-
-.btn-card-supprimer {
-    text-decoration: none;
-    background-color: var(--color-red);
-    border-radius: 0.625rem;
-    padding: 0.75em 3em;
-    margin-left: 1em;
-    color: #FAFDFF
+    margin: 1 0 0 0;
+    letter-spacing: 0.05em;
+    font-family: 'Roboto', sans-serif;
+    /* font-weight: 500;
+    font-style: normal; */
+    font-size: calc(23 * var(--res));
 }
 
 .date-status {
-    list-style-type: none;
     padding-left: 0;
     display: block flex;
-    padding: 1em 0 1em 0;
+    padding: 0 0 1em 0;
+    font-size: calc(23 * var(--res));
 }
 
-.status-admin {
+.status {
     margin: 0;
     padding: 0 2em 0 4em;
 }
 
-/* User connexion ====================================================== */
-
-.user-container{
+.btn-card {
     display: flex;
-    margin: 3em ;
+    padding-left: 0;
 }
 
-.camera{
-    width: 40em;
-    height: 25em;
-    background-color: #46667B;
-    margin-right: 4em ; 
-    border-radius: 0.625rem;;
+/* MODAL BOX ================================= */
+
+.modal-container {
+    /* display: none; */
+    visibility: hidden;
+    position: fixed;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    transition: visibility 0.4s;
 }
 
-.user-content{
-    margin-top: 2em;
+.modal-container.active {
+    visibility: visible;
 }
 
-/* Visio-conférence ====================================================== */
-
-.petit-logo{
-    width: 3em;
-}
-
-.fenetre-visio{
-    max-width: 1800px;
+.overlay {
+    opacity: 0;
+    position: absolute;
     width: 100%;
-    height: 32em;
-    margin:  auto;
-    background-color: #46667B;
-    border-radius: 0.625rem;
-    display: grid; 
-    grid-template-columns: repeat(auto-fill, 10em);
-    grid-gap: .5em;
-    justify-content: center;
+    height: 100%;
+    background: var(--color-modal);
+    transition: opacity 0.4s 0.2s ease-out;
 }
 
-.card-visio{
-    border-radius: 0.625rem;
-    background-color: #D1E5F2;
-    width: 10em;
-    height: 8.5em;
-   
+.modal-container.active .overlay {
+    opacity: 1;
+    transition: opacity 0.4s ease-out;
 }
 
-.user-etat{
-    display: flex;
-    list-style-type: none;
-    padding-left: 1em;
-    margin: 0; 
+.modal {
+    opacity: 0;
+    width: 95%;
+    max-width: 500px;
+    min-width: 300px;
+    padding: 30px;
+    background: #fff;
+    border-radius: 5px;
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, calc(-50% - 50px));
+    transition:
+        opacity 0.4s ease-out,
+        transform 0.4s ease-out;
 }
 
-.visio-micro {
-    padding-right: 0.5em;
-}
-.visio-person {
-    height: 7em;
-    background-color: #9AC3ED;
-    margin-left:0.5;
-    margin-right: 0.5;
-    border-radius: 0.625rem 0.625rem 0 0 ;
-    
+.modal-container.active .modal {
+    opacity: 1;
+    transform: translate(-50%, -50%);
+    transition:
+        opacity 0.4s ease-out,
+        transform 0.4s ease-out;
 }
 
+.close-modal {
+    border: none;
 
-/* Visio-conférence - footer ====================================================== */
-.visio-container{
-    display: flex;
-    background-color: #46667B;
-    border-radius: 0.625rem;
-    margin: 0.75em 2em ; 
-}
-
-.font-semibold{
-    font-weight: 600;
-    height: fit-content;
-    margin: 0;
-    
-
-}
-.visio{
-    list-style: none;
-    margin: 0.25em 2em ; 
-    padding: 1rem 0.25rem .5rem 0.25rem;
-    height: fit-content;
-    background-color: #46667B; 
-    
-    border-radius: 0.625rem;
-}
-.btn-visio{
-    text-decoration: none;
-    padding-top:0.75rem;
-    padding-bottom:0.75rem ;
-    list-style: none;
-    color: var(--main-color); 
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+    /* background: #ff365e; */
+    color: var(--color-red);
 }
 
-@media (hover: hover) {
-    .visio:hover {
-      background: #39BAAB;
-    }
-  }
-  
-.visio-icone{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    
-}
-.visio-text{
-    padding:0.75em 0 0 0;
-    margin:0;
+.modal h3 {
+    color: #162d4e;
+    margin-bottom: 10px;
+    font-family: 'BespokeStencil-Regular', 'Roboto', sans-serif;
+    font-weight: bold;
 }
 
-.participant{
-    padding: 0.75rem 0.25rem .37rem 0.25rem;
+.modal p {
+    color: #162d4e;
+    line-height: 1.4;
+    margin-bottom: 1em;
 }
 
-.btn-visio-participant{
-    text-decoration: none;
-    padding-bottom: 0;
-    color: var(--main-color); 
-}
-
-.visio-text-participant{
-    padding-top: 0;
-    margin:0;
-}
-.visio-icone-numero{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.deconnexion{
-    padding-top: 1.5em;
-}
-.visio-deconnexion{
-    text-decoration: none;
-    color: var(--main-color);
-    background-color: var(--color-red); 
-    border-radius: 0.625rem;
-    padding: 1.2rem 0.75rem 1rem 0.75rem ;
-
+.content {
+    margin-top: 35%;
 }
