--- a/public/views/client.html
+++ b/public/views/client.html
@@ -74,9 +74,9 @@
 
         <!-- show this before to join -->
 
-        <div id="loadingDiv" class="center pulsate">
+        <div id="loadingDiv" class="center fadeIn">
             <h1>Chargement..</h1>
-            <img src="../images/loading.gif" style="width: 400px" />
+            <img src="../images/little_logo.svg" style="width: 400px" />
             <pre>
             Veuillez autoriser l'accès à votre caméra et votre microphone SVP
             </pre>
