--- a/public/views/login.html
+++ b/public/views/login.html
@@ -39,9 +39,8 @@
     
 
     <!-- ma feuille de style -->
-    <link rel="stylesheet" href="./css/landing.css" />
+    <link rel="stylesheet" href="../css/landing.css" />
 </head>
-
 
     <body>
 
