--- a/public/views/client.html
+++ b/public/views/client.html
@@ -263,8 +263,8 @@
                 <div class="caption-inputarea">
                     <select id="recognitionLanguage"></select>
                     <select id="recognitionDialect"></select>
-                    <button id="speechRecognitionStart" class="fas fa-play">&nbsp;Start</button>
-                    <button id="speechRecognitionStop" class="fas fa-stop">&nbsp;Stop</button>
+                    <button id="speechRecognitionStart" class="fas fa-play">&nbsp;Commencer</button>
+                    <button id="speechRecognitionStop" class="fas fa-stop">&nbsp;Arrêter</button>
                 </div>
             </section>
         </section>
