--- a/public/views/client.html
+++ b/public/views/client.html
@@ -20,7 +20,7 @@
         />
         <meta
             name="keywords"
-            content="webrtc, openAI, chatGPT, webrtc stun, webrtc turn, video meeting, video chat, multi video chat, peer to peer, p2p, zoom"
+            content="hdm"
         />
 
         <!-- https://ogp.me -->
@@ -60,7 +60,6 @@
 
         <!-- JavaScripts -->
 
-        <script async src="../js/umami.js"></script>
     </head>
 
     <body onload="initClientPeer()">
